fix issue with firefox scrollbar

--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ nav a, nav .slide{
 	}
 }
 
-@media only screen and (max-width: 598px) {
+@media only screen and (max-width: 613px) {
 	nav {
 		height: 100px;
 	}
